--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -96,10 +96,6 @@ button[mat-icon-button]:not([color]) {
   }
 }
 
-.mat-dialog-container {
-  padding: 0 !important;
-}
-
 .mat-drawer-container {
   height: 100%;
   background: transparent;
